Updated Dependencies
Updated JUnit Jupiter from 5.10.2 to 5.11.3
Updated Mockito Core from 5.11.0 to 5.14.2
Removed deprecated Mockito Inline
Updated AssertJ from 3.25.3 to 3.26.3
Updated Maven Install plugin from 3.1.1 to 3.1.3
Updated Maven Jar plugin from 3.3.0 to 3.4.2
Updated Maven Surefire plugin from 3.2.5 to 3.5.1